# NovelSeek-Pro-PC

./: .gitignore  API_EXAMPLES.md  DEVELOPMENT.md  PROJECT_OVERVIEW.txt  QUICKSTART.md  README.md  README.zh-CN.md  generate-ico.cjs  generate-icons.cjs  index.html  package-lock.json  package.json  project.md  tailwind.config.js  tsconfig.json  vite.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  models.rs
src-tauri/src/api/: deepseek.rs  mod.rs  pollinations.rs
src-tauri/src/commands/: ai.rs  chapter.rs  mod.rs  project.rs  stream.rs  system.rs
src-tauri/src/db/: mod.rs  schema.rs
src-tauri/src/services/: chapter_service.rs  generation_service.rs  mod.rs  project_service.rs
src/components/: Button.tsx  Input.tsx  Layout.tsx  Sidebar.tsx  TextArea.tsx  Topbar.tsx
src/pages/: CharactersPage.tsx  EditorPage.tsx  ExportPage.tsx  HomePage.tsx  OutlinePage.tsx  ProjectPage.tsx  SettingsPage.tsx
src/services/: api.ts
src/store/: index.ts
src/types/: index.ts
src/utils/: i18n.ts  index.ts
